--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,7 +13,7 @@
           <li class="mb-2"><a href="/" class="text-white text-decoration-none">Home</a></li>
           <li class="mb-2"><a href="/experience" class="text-white text-decoration-none">Experience</a></li>
           <li class="mb-2"><a href="/skills" class="text-white text-decoration-none">Skills</a></li>
-          <li><a href="/certifications" class="text-white text-decoration-none">Certifications</a></li>
+          <li class="mb-2"><a href="/certifications" class="text-white text-decoration-none">Certifications</a></li>
           <li><a href="/contact" class="text-white text-decoration-none">Contact</a></li>
         </ul>
       </div>
@@ -28,7 +28,8 @@
             <i [class]="link.icon"></i>
           </a>
         </div>
-        <p class="small mt-3 mb-0">+32 490 12 57 23</p>
+        <p class="small mt-3 mb-0">{{phoneNumber}}</p>
+        <p class="small mt-3 mb-0">{{email}}</p>
       </div>
     </div>
 
