--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <span class="fw-bold">Aymen Farhani</span><br/>
-      <span>Senior Software Engineer</span>
+      <span class="fw-bold">Welcome!</span>
       <span class="text-muted small d-block">Senior Java Developer | Scrum Master</span>
     </a>
 
