--- a/src/app/components/certifications/certifications.component.html
+++ b/src/app/components/certifications/certifications.component.html
@@ -4,8 +4,8 @@
 
     <div class="certifications-grid">
       <div *ngFor="let cert of certifications" class="certification-card">
-        <div class="certification-icon">
-          <i class="bi" [class]="cert.icon"></i>
+        <div class="certification-logo">
+          <img [src]="cert.logo" width="50" height="50">
         </div>
         <div class="certification-content">
           <h3 class="certification-title">{{ cert.title }}</h3>
