--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="/">
-      <span class="fw-bold">Welcome!</span>
-      <span class="text-muted small d-block">Senior Java Developer | Scrum Master</span>
+    <a class="navbar-brand" routerLink="/">
+      <div class="brand-wrapper">
+        <img src="assets/images/me.jpg" alt="Aymen Farhani" class="profile-image">
+        <div class="brand-text">
+          <span class="name">Aymen Farhani</span>
+          <span class="title">Senior Java Developer | Scrum Master</span>
+        </div>
+      </div>
     </a>
 
     <button class="navbar-toggler" type="button"
@@ -13,10 +18,16 @@
     </button>
 
     <div class="collapse navbar-collapse" [class.show]="!isNavCollapsed">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item" *ngFor="let item of navItems">
-          <a class="nav-link" href="{{item.path}}" [class.active]="isActive(item.path)">
-            {{ item.name }}
+          <a class="nav-link"
+             [routerLink]="item.path"
+             routerLinkActive="active"
+             [routerLinkActiveOptions]="{exact: true}">
+            <span class="nav-link-content">
+              <i [class]="'bi bi-'"></i>
+              <span class="nav-text">{{ item.name }}</span>
+            </span>
           </a>
         </li>
       </ul>
