--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -31,6 +31,18 @@
           </a>
         </div>
       </div>
+      <!-- Medium -->
+      <div class="contact-card" *ngIf="contactInfo.medium">
+        <div class="contact-icon">
+          <i class="bi bi-medium"></i>
+        </div>
+        <div class="contact-details">
+          <h3>Medium</h3>
+          <a [href]="'https://' + contactInfo.medium" target="_blank" class="contact-link">
+            {{ contactInfo.medium.replace('github.com/', '') }}
+          </a>
+        </div>
+      </div>
 
       <!-- Email -->
       <div class="contact-card" *ngIf="contactInfo.email">
