--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -108,3 +108,10 @@
     margin: 1.5rem auto;
   }
 }
+
+.media-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+}
