--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
 </div>
 <div class="media-grid">
 <!-- GitHub -->
-      <div class="contact-card" *ngIf="github">
+      <div class="media-card" *ngIf="github">
         <div class="contact-icon">
           <i class="bi bi-github"></i>
         </div>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <!-- Medium -->
-      <div class="contact-card" *ngIf="medium">
+      <div class="media-card" *ngIf="medium">
         <div class="contact-icon">
           <i class="bi bi-medium"></i>
         </div>
