--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -33,7 +33,7 @@
 }
 
 .intro-text {
-  text-align: left;
+  text-align: center;
   font-size: 1.1rem;
   line-height: 1.8;
   color: #34495e;
@@ -64,7 +64,7 @@
 .separator {
   height: 1px;
   background: linear-gradient(to right, transparent, #ddd, transparent);
-  margin: 2rem 0;
+  margin: 1rem 0;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
